app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --primary-pink: #ffddd2;
}

.dynamic-full-height {
  height: 100dvh;
}

@media (min-height: 2000px) {
  .wide-screen-height {
    height: 35dvh !important;
  }
  .wide-screen-height-logo {
    height: 10dvh !important;
  }
  .custom-border {
    border-width: 0 1px 8px 1px; /* top, right, bottom, left */
    border-style: solid; /* Applies to all borders */
  }
}

.message-alert {
  top: 0px;
  transition: all 500ms ease;
  z-index: -1;
}

.message-alert-active {
  top: -18px !important;
}

.statistics-logo:hover #statistics-logo {
  color: #ec4899 !important;
}

/* Logo Animation */

.statistics-logo #Bar1 rect {
  transition: height 0.5s ease;
  height: 0%;
}

.statistics-logo:hover #Bar1 rect {
  height: 170%;
}

.statistics-logo #Bar2 rect {
  transition: height 0.5s ease;
  height: 0%;
}

.statistics-logo:hover #Bar2 rect {
  height: 100%;
}

.statistics-logo #Bar3 rect {
  transition: height 0.5s ease;
  height: 0%;
}

.statistics-logo:hover #Bar3 rect {
  height: 90%;
}

.chart-container {
  width: 100%; /* Full width of the parent element */
  height: 100%; /* Full height of the parent element */
}

.chart-container rect {
  color: var(--primary-pink);
}

